<resources>
    <string name="app_name">TP5</string>
    <string name="formulaire">FORMULAIRE</string>
    <string name="pour_prendre_un_rendez_vous_veuillez_remplir_le_formulaire_d_inscription">Pour prendre un rendez-vous veuillez remplir le formulaire d\'inscription</string>
    <string name="bienvenu_au_centre_dentaire_de_haute_technologie">Bienvenu au centre dentaire de haute technologie</string>
    <string name="questionnaire_d_inscription_confidentiel">Questionnaire d\'inscription confidentiel</string>
    <string name="madame">Madame</string>
    <string name="monsieur">Monsieur</string>
    <string name="tuteur">Tuteur</string>
    <string name="parent">Parent</string>
    <string name="si_vous_avez_moins_de_18_ans_inscrire_le_nom_du_parent_tuteur">Si vous avez moins de 18 ans, inscrire le nom du parent/tuteur</string>
    <string name="raison_de_la_visite">Raison de la visite</string>
    <string name="en_cas_d_urgence_contacter">En cas d\'urgence, contacter</string>
    <string name="expiration">Expiration</string>
    <string name="n_assurance_maladie">N assurance maladie</string>
    <string name="nom">Nom</string>
    <string name="rue">Rue</string>
    <string name="app">app</string>
    <string name="ville">Ville</string>
    <string name="n_civique">N civique</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="prenom">Prenom</string>
    <string name="date_de_naissance_a_m_j">Date de naissance A/M/J</string>
    <string name="cellulaire">Cellulaire</string>
    <string name="telephone_travail">Telephone(Travail)</string>
    <string name="telephone">Telephone</string>
    <string name="code_postal">Code postal</string>
    <string name="ant_c_dents_m_dicaux">Antécédents médicaux</string>
    <string name="poids">Poids</string>
    <string name="taille">Taille</string>
    <string name="m_decin_de_famille">Médecin de famille</string>
    <string name="tes_vous_actuellement_sous_les_soins_d_un_m_decin">Êtes-vous actuellement sous les soins d\'un médecin ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="si_oui_raison">Si oui, raison</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="nom_du_m_decin">Nom du médecin</string>
    <string name="si_vous_prenez_des_m_dicaments_ou_en_avez_pris_au_cours_des_six_derniers_mois_sp_cifiez">Si vous prenez des médicaments ou en avez pris au cours des six derniers mois, spécifiez :</string>
    <string name="nom_du_m_decin_qui_l_a_prescrit">Nom du médecin qui l\'a prescrit</string>
    <string name="nom_du_m_dicament">Nom du médicament</string>
    <string name="raison">Raison</string>
    <string name="soumettre">SOUMETTRE</string>
</resources>