<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <android.widget.RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:text="@string/questionnaire_d_inscription_confidentiel" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:id="@+id/Line1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prenom" />

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPrenom"
                    android:inputType="text"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom" />

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNom"
                    android:inputType="text"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/checkBoxF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/f" />
                <CheckBox
                    android:id="@+id/checkBoxM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m" />

            </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line2"
        android:layout_below="@+id/Line1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_civique" />

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCivique"
            android:inputType="text"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rue" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtRue"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtApp"
            android:inputType="text"
            android:textAlignment="center"/>

            </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line3"
        android:layout_below="@+id/Line2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ville" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtVille"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_postal" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCodePostal"
            android:inputType="text"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line4"
        android:layout_below="@+id/Line3"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtTelephone"
        android:inputType="phone"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone_travail" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtTelephone1"
        android:inputType="text"
        android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line5"
        android:layout_below="@+id/Line4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cellulaire" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCell"
            android:inputType="phone"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_de_naissance_a_m_j" />

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtDate"
            android:inputType="date"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line6"
        android:layout_below="@+id/Line5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_assurance_maladie" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCarteMaladie"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration" />

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtExpiration"
            android:inputType="text"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line7"
        android:layout_below="@+id/Line6"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_cas_d_urgence_contacter" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtContactUrgence"
            android:inputType="text"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTelephone2"
            android:inputType="text"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/Line8"
    android:layout_below="@+id/Line7"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raison_de_la_visite" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtRaisonVisite"
        android:inputType="text"
        android:textAlignment="center"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line9"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Line8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si_vous_avez_moins_de_18_ans_inscrire_le_nom_du_parent_tuteur" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line10"
        android:layout_below="@+id/Line9">

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtTuter"
        android:inputType="text"
        android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line11"
        android:layout_marginStart="175dp"
        android:layout_below="@+id/Line9"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBoxParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/parent" />

        <CheckBox
            android:id="@+id/checkBoxTuteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuteur" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Line12"
        android:layout_marginStart="260dp"
        android:layout_below="@+id/Line9"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBoxMadame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/madame" />

        <CheckBox
            android:id="@+id/checkBoxMonsieur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monsieur" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_createAccount"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Line12"
        android:layout_gravity="center"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:onClick="goToFormulaire2"
        android:text="NEXT" />

    </android.widget.RelativeLayout>

    '
</androidx.constraintlayout.widget.ConstraintLayout>
